--- a/src/layout/css/style.css
+++ b/src/layout/css/style.css
@@ -1,4 +1,5 @@
 @import "item-style.css";
+@import "footer-style.css";
 @import "account-style.css";
 @import "search-style.css";
 @import "profile-style.css";
@@ -605,82 +606,6 @@ header {
     text-decoration: underline;
 }
 
-.footer-lower {
-    min-height: 111px;
-    background-color: #191919;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.footer-lower-block {
-    margin-left: 15px;
-}
-
-.footer-lower-block p, .footer-lower-block a {
-    text-decoration: none;
-    font-family: 'montserrat', 'arial', sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: normal;
-    color: #555555;
-    display: inline-block;
-}
-
-.footer-lower-block a:after {
-    content: "";
-    display: inline-block;
-    width: 1px;
-    height: 13px;
-    background-color: #252525;
-    margin: 0 13px;
-}
-
-.footer-lower-block p:after {
-    content: "";
-    display: inline-block;
-    width: 1px;
-    height: 13px;
-    background-color: #252525;
-    margin: 0 13px;
-}
-
-.footer-lower-block a:last-child:after {
-    display: none;
-}
-
-.footer-lower-block p:last-child:after {
-    display: none;
-}
-
-.footer-lower-allocated {
-    color: #959595;
-}
-
-.footer-lower-block a:hover {
-    color: #c7b299;
-}
-
-.footer-lower-allocated:hover {
-    color: #c7b299;
-}
-
-.footer-icon {
-    display: flex;
-}
-
-.social-icon {
-    width: 40px !important;
-    height: 40px !important;
-    color: #959595;
-    margin-left: 10px;
-}
-
-.social-icon:hover {
-    color: #c7b299;
-}
-
 .about-company-page-cnt {
     display: flex;
     height: 100%;
@@ -774,10 +699,6 @@ header {
     .tagline {
         padding-left: 10px;
         padding-bottom: 30px;
-    }
-
-    .footer-lower-block {
-        text-align: center;
     }
 
     .notfound-smile {
@@ -906,13 +827,4 @@ header {
     .about-company-item-title {
         font-size: 28px;
     }
-
-    .footer-lower {
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }  
 }
-
-
-
