--- a/src/layout/css/search-style.css
+++ b/src/layout/css/search-style.css
@@ -18,7 +18,6 @@
     padding-left: 16px;
     border: none;
     outline: none;
-    opacity: 0.9;
     width: 220px;
     font-family: 'raleway', 'arial', sans-serif;
     font-size: 16px;
@@ -31,7 +30,7 @@
     padding: 0 13px;
     border: 0;
     background: none;
-    border-left: 1px solid #e6e6e6;
+    margin-left: 1px;
     background-color: #00b0e0;
     color: white;
     font-family: 'raleway', 'arial', sans-serif;
@@ -52,7 +51,6 @@
     padding-left: 8px;
     border: none;
     outline: none;
-    opacity: 0.9;
     width: 200px;
     font-family: 'raleway', 'arial', sans-serif;
     font-size: 14px;
