--- a/src/layout/css/item-style.css
+++ b/src/layout/css/item-style.css
@@ -9,15 +9,15 @@
     margin: 20px;
 }
 
-.pinned{
+.pinned {
     background-color: #fffaef;
 }
 
-.vacancy:hover{
+.vacancy:hover {
     box-shadow: 2px 2px 10px 1px rgba(34, 60, 80, 0.16);
 }
 
-.vacancy-block-logo{
+.vacancy-block-logo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,7 +26,7 @@
     border-radius: 4px;
 }
 
-.vacancy-logo{
+.vacancy-logo {
     width: 60px; 
     height: 60px;
     padding: 5px;
@@ -67,7 +67,7 @@
     border-radius: 50%;
   }
 
-.vacancy-block-text{
+.vacancy-block-text {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -90,19 +90,19 @@
     color: #00b0e0;
 }
 
-.vacancy-salary span{
+.vacancy-salary span {
     font-size: 10px;
     font-weight: 400;
     color: #eed6b9;
 }
 
-.vacancy-block-icon{
+.vacancy-block-icon {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.vacancy-icon{
+.vacancy-icon {
     color: #eed6b9;
     opacity: 0.5;
     margin-bottom: 10px;
@@ -125,15 +125,16 @@
     box-shadow: 2px 2px 10px 1px rgba(34, 60, 80, 0.16);
 }
 
-.vacancy-large:hover{
+.vacancy-large:hover {
     box-shadow: none;
 }
 
-.vacancy-provider{
+.vacancy-provider {
     font-family: 'raleway', 'arial', sans-serif;
     font-size: 10px;
     font-weight: 400;
     color: #eed6b9;
+    margin: initial;
 }
 
 .vacancy-name-large {
