--- a/src/layout/css/search-style.scss
+++ b/src/layout/css/search-style.scss
@@ -47,6 +47,8 @@
         font-family: inherit;
         font-size: 0.9em;
         color: $dark-color;
+        -webkit-appearance: none;
+        border-radius: 0;
     }
 }
 
