--- a/src/layout/css/style.scss
+++ b/src/layout/css/style.scss
@@ -283,7 +283,16 @@ header {
     display: flex;
     justify-content: center;
     height: 100%;
-    background: rgb(145, 185, 196) url("../../assets/img/bg_404.jpg") no-repeat center center/cover;
+    background-image: -webkit-image-set(
+        url("../../assets/img/bg_404.webp") 1x,
+        url("../../assets/img/bg_404x2.webp") 2x,
+        url("../../assets/img/bg_404.jpg") 2x
+    );
+    background-color: rgb(145, 185, 196);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    // background: rgb(145, 185, 196) url("../../assets/img/bg_404.jpg") no-repeat center center/cover;
 }
 
 .notfound-page {
