--- a/src/layout/css/style.scss
+++ b/src/layout/css/style.scss
@@ -5,7 +5,7 @@
 @import "item-style.css";
 @import "footer-style.css";
 @import "profile-style.css";
-@import "vacancies-list-style.css";
+@import "vacancies-list-style.scss";
 @import "vacancy-page.css";
 
 * {
@@ -72,7 +72,7 @@ header {
     flex-direction: column;
     &-title {
         display: flex;
-        padding: 1.5em 10em 0 2em;
+        padding: 1.5em 10em 2em 2em;
         flex-direction: column;
         font-family: 'raleway', 'arial', sans-serif;
         font-style: normal;
@@ -100,13 +100,14 @@ header {
     font-size: 30px;
     font-weight: 600;
     font-style: normal;
-    color: #555555;
+    color: $dark-color;
     text-align: center;
+    cursor: pointer;
 }
 
 .section-block__span {
     font-weight: 400;
-    color: #8c8c8c;
+    color: $medium-color;
 }
 
 .section-block__subtitle {
@@ -130,113 +131,74 @@ header {
     color: $bright-color;
     margin: 30px 0;
     padding: 10px 0;
+    &:hover {
+        background-color: $bright-color;
+        color: white;
+        cursor: pointer;
+    }
+    &:active {
+        color: #eed6b9;
+        cursor: pointer;
+        box-shadow: none;
+    }
 }
 
-.section-block__button:hover {
-    background-color: $bright-color;
-    color: white;
-    cursor: pointer;
-}
-
-.section-block__button:active {
-    color: #eed6b9;
-    cursor: pointer;
-    box-shadow: none;
-}
-
-.profession-block {
+.prof-city-list {
     display: flex;
     justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 50px;
-    margin-bottom: 30px;
-}
-
-.profession-block-name {
-    border-right: 1px solid #e5e5e5;
-}
-
-.profession-block-header {
+    padding-top: 1.2em;
+    padding-bottom: 1.2em;
     font-family: 'raleway', 'arial', sans-serif;
     font-size: 22px;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 30px;
-    color: $dark-color;
-    margin-left: 30px;
-    margin-right: 15px;
-}
-
-.profession-block-header:hover {
-    color: $light-color;
-    cursor: pointer;
-}
-
-.profession-block-multiple {
-    list-style-type: none;
-    column-count: 3;
-    column-width: 312px;
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 15px;
-}
-
-.profession-multiple-item {
-    font-family: 'montserrat', 'arial', sans-serif;
-    font-size: 14px;
     font-weight: 400;
     font-style: normal;
-    color: #8c8c8c;
-    margin-bottom: 10px;
-    letter-spacing: -0.3px;
-}
-
-.profession-multiple-item .selected{
-    font-weight: 600;
-    color: $bright-dark-color;
-}
-
-.profession-multiple-item a, 
-.profession-multiple-item a:active,
-.profession-multiple-item a:visited {
-    text-decoration: none;
-    color: #8c8c8c;
-}
-
-.profession-multiple-item a:hover {
-    color: $light-color;
-    cursor: pointer;
-}
-
-.profession-block-city-multiple {
-    list-style-type: none;
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 15px;
-}
-
-.profession-city-multiple-item {
-    font-family: 'montserrat', 'arial', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    font-style: normal;
-    color: #8c8c8c;
-    margin-bottom: 10px;
-    letter-spacing: -0.3px;
-}
-
-.profession-city-multiple-item:hover {
-    color: $light-color;
-    cursor: pointer;
-}
-
-.profession-block-city-button {
-    background: none;
-    border: none;
-    outline: none;
-    margin: 30px 30px;
-    color: $light-color;
-    text-decoration: underline;
+    .prof-list {
+        border-right: 1px solid #e5e5e5;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    .city-list {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    &__h2 {
+        font-size: 1em;
+        font-weight: 600;
+        margin: 1em 0;
+        color: $dark-color;
+        &:hover {
+            color: $light-color;
+        }
+    }
+    &__ul {
+        list-style-type: none;
+        column-count: 3;
+        column-width: 10em;
+    }
+    &__li {
+        font-family: 'montserrat', 'arial', sans-serif;
+        font-size: 0.65em;
+        color: $medium-color;
+        margin-bottom: 0.6em;
+        letter-spacing: -0.3px;
+        &:hover {
+            color: $light-color;
+            cursor: pointer;
+        }
+        & .selected{
+            font-weight: 600;
+            color: $bright-dark-color;
+        }
+    }
+    &__button {
+        background: none;
+        border: none;
+        outline: none;
+        margin: 1.2em 1.2em;
+        color: $light-color;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
 
 .about-company-page-cnt {
@@ -274,7 +236,7 @@ header {
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
-    color: #8c8c8c;
+    color: $medium-color;
     letter-spacing: -0.3px;
     padding: 5px 0 0 0;
 }
@@ -292,7 +254,6 @@ header {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    // background: rgb(145, 185, 196) url("../../assets/img/bg_404.jpg") no-repeat center center/cover;
 }
 
 .notfound-page {
@@ -310,7 +271,7 @@ header {
 .notfound-text {
     font-size: 24px;
     font-weight: 400;
-    color: #8c8c8c;
+    color: $medium-color;
     letter-spacing: -0.8px;
 }
 
@@ -324,7 +285,7 @@ header {
         background-position: bottom right -80px;
         &-title {
             font-size: 5vw;
-            padding: 1em 10em 0 30px;
+            padding: 1em 10em 1em 30px;
         }
     }
 }
@@ -335,8 +296,13 @@ header {
         background-size: 100%;
         min-height: 80vmin;
         &-title {
-            padding: 1em 0 0 30px;
+            padding: 1em 0 1em 30px;
         }
+    }
+    .prof-city-list {
+        padding-top: 1em;
+        padding-bottom: 1em;
+        font-size: 20px;
     }
 }
 
@@ -351,6 +317,10 @@ header {
                 font-weight: normal;
             }
         }
+    }
+
+    .prof-city-list {
+        font-size: 18px;
     }
 
     .notfound-smile {
@@ -372,7 +342,7 @@ header {
         min-height: 440px;
     }
     
-    .profession-block {
+    .prof-city-list {
         display: block;
     }
 
